# vecn

./: meson.build
include/ludo/: vecn.hpp
